--- a/Lab2_Week2_Arraybutton1_No34.ioc
+++ b/Lab2_Week2_Arraybutton1_No34.ioc
@@ -11,15 +11,16 @@ Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA9
-Mcu.Pin11=PA10
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=PB3
-Mcu.Pin15=PB4
-Mcu.Pin16=PB5
-Mcu.Pin17=PB6
-Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin10=PA8
+Mcu.Pin11=PA9
+Mcu.Pin12=PA10
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=PB3
+Mcu.Pin16=PB4
+Mcu.Pin17=PB5
+Mcu.Pin18=PB6
+Mcu.Pin19=VP_SYS_VS_Systick
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
@@ -28,7 +29,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA5
 Mcu.Pin8=PA7
 Mcu.Pin9=PC7
-Mcu.PinsNb=19
+Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -81,6 +82,10 @@ PA7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA7.Locked=true
 PA7.PinState=GPIO_PIN_SET
 PA7.Signal=GPIO_Output
+PA8.GPIOParameters=PinState
+PA8.Locked=true
+PA8.PinState=GPIO_PIN_SET
+PA8.Signal=GPIO_Output
 PA9.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
 PA9.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PA9.GPIO_PuPd=GPIO_NOPULL
